--- a/TeamSeshMerchAppMaui/TeamSeshMerchAppMaui.csproj
+++ b/TeamSeshMerchAppMaui/TeamSeshMerchAppMaui.csproj
@@ -49,14 +49,19 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\bag.png" />
+	  <None Remove="Resources\Images\fetch.png" />
+	  <None Remove="Resources\Images\moneyfilter.png" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <PackageReference Include="CodeHollow.FeedReader" Version="1.2.4" />
+	  <PackageReference Include="EcoCore" Version="7.0.0.14388" />
+	  <PackageReference Include="Sentry" Version="3.22.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <MauiXaml Update="DetailPage.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="FilterPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
