--- a/TeamSeshMerchAppMaui/TeamSeshMerchAppMaui.csproj
+++ b/TeamSeshMerchAppMaui/TeamSeshMerchAppMaui.csproj
@@ -35,7 +35,7 @@
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#131212" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#131212" BaseSize="600,600" />
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#131212" Resize="false"/>
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
