--- a/TeamSeshMerchAppMaui/TeamSeshMerchAppMaui.csproj
+++ b/TeamSeshMerchAppMaui/TeamSeshMerchAppMaui.csproj
@@ -59,7 +59,9 @@
 	  <PackageReference Include="CodeHollow.FeedReader" Version="1.2.4" />
 	  <PackageReference Include="CommunityToolkit.Maui" Version="1.3.0" />
 	  <PackageReference Include="EcoCore" Version="7.0.0.14388" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	  <PackageReference Include="RestSharp" Version="108.0.2" />
+	  <PackageReference Include="System.Net.Http" Version="4.3.4" />
 	</ItemGroup>
 
 	<ItemGroup>
