--- a/TeamSeshMerchAppMaui/TeamSeshMerchAppMaui.csproj
+++ b/TeamSeshMerchAppMaui/TeamSeshMerchAppMaui.csproj
@@ -32,10 +32,10 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#131212" />
+		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#f0e9e9" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#131212" BaseSize="140,140" />
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#131212" BaseSize="500,500" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
