--- a/TeamSeshMerchAppMaui/TeamSeshMerchAppMaui.csproj
+++ b/TeamSeshMerchAppMaui/TeamSeshMerchAppMaui.csproj
@@ -51,6 +51,8 @@
 	<ItemGroup>
 	  <None Remove="Resources\Images\bag.png" />
 	  <None Remove="Resources\Images\fetch.png" />
+	  <None Remove="Resources\Images\filledHeart.png" />
+	  <None Remove="Resources\Images\heart.png" />
 	  <None Remove="Resources\Images\moneyfilter.png" />
 	  <None Remove="Resources\Images\src.png" />
 	</ItemGroup>
@@ -66,6 +68,9 @@
 
 	<ItemGroup>
 	  <MauiXaml Update="DetailPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="myFavorites.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
